--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -173,14 +173,15 @@
             android:title="@string/header_category_system"
             android:summary="@string/system_dashboard_summary"/>
 
-    <Preference
-            android:fragment="com.android.settings.deviceinfo.aboutphone.MyDeviceInfoFragment"
-            android:icon="@drawable/ic_phone_info"
-            android:key="top_level_about_device"
+<Preference
+            android:key="firmware_version"
+	    android:icon="@drawable/ic_phone_info"
             android:order="20"
             android:title="@string/about_settings"
             android:summary="@string/summary_placeholder"
+            android:fragment="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionSettings"
             settings:controller="com.android.settings.deviceinfo.aboutphone.TopLevelAboutDevicePreferenceController"/>
+
 
     <Preference
         android:icon="@drawable/ic_help"
