--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -60,5 +60,19 @@
     <color name="off_black">#90FAFAFA</color>
     <color name="card_outline_light">#33FFFFFF</color>
     <color name="divider_light">#14FFFFFF</color>
+
+    <color name="primary_bg">@android:color/system_neutral1_900</color>
+    <color name="secondary_bg">@android:color/system_neutral2_800</color>
+    <color name="reverse">@android:color/system_accent1_0</color>
+    <color name="text">@android:color/system_neutral2_0</color>
+    <color name="ternary">@android:color/system_neutral1_700</color>
+    <color name="border">@android:color/system_neutral2_700</color>
+    <color name="furn">@android:color/system_accent2_50</color>
+    <color name="acc">@android:color/system_accent1_200</color>
+    <color name="accent_color">@android:color/system_accent1_100</color>
+    <color name="acc2">@android:color/system_accent2_800</color>
+    <color name="acc3">@android:color/system_accent2_200</color>
+
+
 </resources>
 
